# Kerneloom

./: .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  LICENSE  MODULE.bazel  README.md  future_tasks.txt  tasks.py
bazel/: hip.bzl
cmake/: FindCUDNN.cmake
help/: commands.txt
include/: kerneloom.hpp
include/backend/: backend.hpp  backend_memory.hpp
include/backend/cpu/: cpu_allocator.hpp  cpu_copy.hpp  cpu_parallel.hpp  cpu_thread_pool.hpp
include/backend/cuda/: cuda_allocator.cuh  cuda_copy.cuh  cuda_memory.cuh  cuda_pinned_allocator.cuh  cuda_synchronize.cuh  cuda_transfer_stream.cuh
include/backend/rocm/: rocm_allocator.hiph  rocm_copy.hiph  rocm_memory.hiph  rocm_pinned_allocator.hiph  rocm_synchronize.hiph  rocm_transfer_stream.hiph
include/cnn/: conv2d_layer.hpp
include/cnn/evaluation/: evaluation.hpp  evaluation_result.hpp
include/cnn/inference/: inference.hpp
include/cnn/layers/: activation_layer.hpp  avgpool2d_layer.hpp  conv2d_layer.hpp  flatten_layer.hpp  layer.hpp  linear_layer.hpp  maxpool2d_layer.hpp
include/cnn/losses/: binary_cross_entropy_loss.hpp  categorical_cross_entropy_loss.hpp  loss.hpp  mse_loss.hpp  reduction.hpp
include/cnn/metrics/: classification_metrics.hpp
include/cnn/network/: initializer.hpp  sequential.hpp
include/cnn/optimizers/: adam_optimizer.hpp  optimizer.hpp  parameter.hpp  sgd_optimizer.hpp
include/cnn/options/: conv2d_options.hpp  pooling2d_options.hpp
include/cnn/training/: training.hpp  training_callbacks.hpp  training_progress.hpp  training_result.hpp
include/core/: allocator.hpp  buffer.hpp  copy.hpp  device.hpp  dtype.hpp  layout.hpp  memory_type.hpp  shape.hpp  storage.hpp  synchronize.hpp  tensor.hpp  tensor_pool.hpp  transfer_stream.hpp
include/data/: batch.hpp  data_loader.hpp  data_loader_memory_budget.hpp  data_loader_options.hpp  dataset_split.hpp  image.hpp  image_dataset.hpp  image_decoder.hpp  image_sample.hpp  image_transform.hpp  memory_plan.hpp  memory_planner.hpp  memory_policy.hpp
include/data/data_loader/: data_loader_impl.hpp
include/data/internal/: batch_storage.hpp  batch_storage_pool.hpp  blocking_queue.hpp  decoded_image_cache.hpp  host_batch_pool.hpp
include/kernels/cpu/: conv2d_cpu_float32.hpp  convd2_cpu_float32_naive.hpp  matmul_cpu.hpp
include/kernels/cuda/: matmul_cuda.cuh  matmul_cuda_float32_naive.cuh
include/kernels/rocm/: conv2d_rocm_float32_naive.hiph  matmul_rocm.hiph
include/ops/: activation.hpp  activation_backward.hpp  adam_update.hpp  avgpool2d.hpp  backward_activation.hpp  backward_avgpool2d.hpp  backward_binary_cross_entropy.hpp  backward_categorical_cross_entropy.hpp  backward_conv2d.hpp  backward_linear.hpp  backward_maxpool2d.hpp  backward_mse_loss.hpp  binary_cross_entropy.hpp  categorical_cross_entropy.hpp  conv2d.hpp  conv2d_naive.hpp  linear.hpp  matmul.hpp  matmul_naive.hpp  maxpool2d.hpp  maxpool2d_with_indices.hpp  mse_loss.hpp  sgd_update.hpp
include/ops/validation/: activation_validation.hpp  adam_update_validation.hpp  avgpool2d_validation.hpp  backward_activation_validation.hpp  backward_avgpool2d_validation.hpp  backward_binary_cross_entropy_validation.hpp  backward_categorical_cross_entropy_validation.hpp  backward_conv2d_validation.hpp  backward_linear_validation.hpp  backward_maxpool2d_validation.hpp  backward_mse_loss_validation.hpp  binary_cross_entropy_validation.hpp  categorical_cross_entropy_validation.hpp  conv2d_validation.hpp  linear_validation.hpp  maxpool2d_validation.hpp  mse_loss_validation.hpp  (+2 more)
kernels/cpu/: matmul_cpu.cpp
kernels/cuda/: matmul_cuda.cu
kernels/rocm/: matmul_rocm.hip
playground/: main.cpp
src/backend/: backend.cpp  backend_memory.cpp
src/cnn/: conv2d_layer.cpp
src/core/: allocator.cpp  buffer.cpp  copy.cpp  device.cpp  dtype.cpp  layout.cpp  shape.cpp  storage.cpp  synchronize.cpp  tensor.cpp  tensor_pool.cpp  transfer_stream.cpp
src/data/: batch.cpp  data_loader.cpp  data_loader_memory_budget.cpp  dataset_split.cpp  image.cpp  image_dataset.cpp  image_decoder.cpp  image_transform.cpp  memory_planner.cpp
src/ops/: activation.cpp  activation_backward.cpp  adam_update.cpp  avgpool2d.cpp  backward_activation.cpp  backward_avgpool2d.cpp  backward_binary_cross_entropy.cpp  backward_categorical_cross_entropy.cpp  backward_conv2d.cpp  backward_linear.cpp  backward_maxpool2d.cpp  backward_mse_loss.cpp  binary_cross_entropy.cpp  categorical_cross_entropy.cpp  conv2d.cpp  conv2d_naive.cpp  linear.cpp  matmul.cpp  matmul_naive.cpp  maxpool2d.cpp  maxpool2d_with_indices.cpp  mse_loss.cpp  sgd_update.cpp
test/: test_activation_backward.cpp  test_activations.cpp  test_backward_conv2d.cpp  test_conv2d.cpp  test_conv2d_naive.cpp  test_conv_d2.cpp  test_dataloader.cpp  test_dataloader_memory_budget.cpp  test_layers.cpp  test_linear_backward.cpp  test_loss.cpp  test_matmul_naive.cpp  test_optimizers.cpp  test_pooling.cpp  test_sequential.cpp  test_training.cpp
test/manual/: test_conv2d.cpp  test_linear.cpp  test_sequential.cpp  test_training.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/common/: backend_sync.hpp  benchmark_report.hpp  benchmark_result.hpp  benchmark_timer.hpp  dtype_dispatch.hpp  tensor_compare.hpp  tensor_factory.hpp  tensor_transfer.hpp  test_options.hpp
tests/kernels/: linear_forward_test.cpp
tests/manual/: test_benchmark.cpp  test_dataloader.cpp  test_dataloader_memory_budget.cpp  test_layers.cpp  test_loss.cpp
tests/suites/: cuda_activation_backward_float32_test.cpp  cuda_activation_forward_float32_test.cpp  cuda_avgpool2d_forward_float32_test.cpp  cuda_linear_backward_float32_test.cpp  cuda_linear_forward_float32_test.cpp  cuda_maxpool2d_forward_float32_test.cpp  cuda_maxpool2d_with_indices_forward_float32_test.cpp  linear_forward_float32_test.cpp  linear_forward_test.cpp  rocm_activation_backward_float32_test.cpp  rocm_activation_forward_float32_test.cpp  rocm_avgpool2d_forward_float32_test.cpp  rocm_linear_backward_float32_test.cpp  rocm_linear_forward_float32_test.cpp  rocm_maxpool2d_forward_float32_test.cpp  rocm_maxpool2d_with_indices_forward_float32_test.cpp
(+294 files in other folders)
